src/client/style.css
body {
	/* Visiblity variables default values (display property) */
	--show-sido: none;
	--show-sgg: none;
	--show-emdong: none;
	padding: 0;
	margin: 0;
}

body:has(#show-sido:checked) {
	--show-sido: block;
}

body:has(#show-sgg:checked) {
	--show-sgg: block;
}
body:has(#show-emdong:checked) {
	--show-emdong: block;
}

#loading {
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	background: #0008;
	backdrop-filter: blur(4px);
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	gap: 10px;
	font-size: 1.5em;
	color: #fff;
	z-index: 1000000;
}
#loading .spinner {
	border: 8px solid #fff;
	border-top: 8px solid transparent;
	border-radius: 50%;
	width: 60px;
	height: 60px;
	animation: spin 1s linear infinite;
}

@keyframes spin {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

#maps-container {
	position: relative;
	display: flex;
	flex-direction: row;
	width: 100vw;
	height: 100vh;
}

.map {
	box-sizing: border-box;
	flex: 1;
	height: 100vh;
	border: 1px solid #aaa;

	&#map-sido {
		display: var(--show-sido);
	}

	&#map-sgg {
		display: var(--show-sgg);
	}

	&#map-emdong {
		display: var(--show-emdong);
	}
}

.map[data-loading='true']::before {
	content: '';
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	background: #0004;
	z-index: 9999;
}
.map[data-loading='true']::after {
	content: '';
	position: absolute;
	width: 24px;
	height: 24px;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 10000;

	border: 4px solid #fff;
	border-top: 4px solid transparent;
	border-radius: 50%;
	animation: spin 1s linear infinite;
}
.map[data-loading='false']::before {
	content: attr(data-name);
	position: absolute;
	bottom: 25px;
	left: 5px;
	padding: 2px 8px;
	font-size: 1.2em;
	z-index: 10000;
	color: #fff;
	border-radius: 4px;
	background: #000a;
}

#tooltip {
	position: fixed;
	pointer-events: none;
	display: none;
	z-index: 10000;
	text-shadow: 1px 1px #000;
	font-size: 1.3em;
	white-space: pre;
}

header {
	box-sizing: border-box;
	position: fixed;
	z-index: 200000;
	background: #0008;
	width: 100%;
	top: 0;
	left: 0;
	color: white;
	padding: 0 10px;

	display: flex;
	align-items: center;
	gap: 20px;

	& h1 {
		display: inline-block;
		margin: 0;
		font-size: 1.4em;
	}
}

#search {
	position: relative;

	& #search-results {
		display: none;
		position: absolute;
		transform: translateY(5px);
		background: #fff;
		width: 100%;
		color: #000;
		max-height: 100px;
		overflow: scroll;
		box-shadow: 0px 0px 5px #0002;
		&:has(.search-result) {
			/* Display border only when search results are present, to avoid ugly floating gray bar */
			border: 1px solid #bbb;
		}
		border-radius: 4px;
		& .search-result {
			box-sizing: border-box;
			padding: 5px 4px;
			cursor: pointer;
			&:hover {
				background: #eee;
			}
		}
	}
}

@media screen and (max-width: 800px) {
	#maps-container {
		flex-wrap: wrap;
	}
	.map {
		min-width: 50vw;
	}

	/* Allows two-way split when all three layers are shown */
	body:has(#show-sido:checked):has(#show-sgg:checked):has(#show-emdong:checked) .map {
		height: 50vh;
	}

	header {
		gap: 2px;
		& h1 {
			font-size: 1em;
		}
	}
}

